--- a/destinations.html
+++ b/destinations.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
+
 <body>
     <nav class="w-full">
         <div id="navbar"
@@ -156,6 +158,194 @@
         </div>
     </nav>
 
+    <section class="mt-24 md:mt-35 lg:mt-40">
+        <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
+            <button id="toggle-nav"
+                class="button-navigasi-phone fixed top-4 md:top-25 left-4 z-50 bg-blue-500 text-white p-2 rounded-md lg:hidden">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path fill="currentColor"
+                        d="M15 19.88c.04.3-.06.62-.29.83a.996.996 0 0 1-1.41 0L9.29 16.7a.99.99 0 0 1-.29-.83v-5.12L4.21 4.62a1 1 0 0 1 .17-1.4c.19-.14.4-.22.62-.22h14c.22 0 .43.08.62.22a1 1 0 0 1 .17 1.4L15 10.75zM7.04 5L11 10.06v5.52l2 2v-7.53L16.96 5z" />
+                </svg>
+            </button>
+            <div class="grid grid-cols-1 lg:grid-cols-[2fr_8fr] gap-5 w-full">
+                <div id="sidebar"
+                    class="navigasi fixed top-0 left-0 h-full w-64 bg-white shadow-lg border-r border-gray-200 transform -translate-x-full transition-transform duration-300 ease-in-out lg:relative lg:translate-x-0 lg:w-auto lg:h-auto lg:shadow-none lg:border-none px-7 py-5 z-40">
+                    <h1 class="text-xl md:text-2xl font-semibold translate mt-20 md:mt-40 lg:mt-0" data-id="Saring"
+                        data-en="Filter">Saring
+                    </h1>
+                    <div class="flex flex-wrap justify-start gap-4 mb-8 mt-7">
+                        <button
+                            class="filter-btn cursor-pointer active px-4 py-2 rounded-full bg-[var(--primary-color)] text-white border border-gray-300 translate"
+                            data-filter="all" data-en="All destinations" data-id="Semua destinasi">All
+                            Destinations</button>
+                        <button
+                            class="filter-btn cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="asia" data-en="Beach" data-id="Pantai">Beach</button>
+                        <button
+                            class="filter-btn cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="europe" data-en="Waterfall" data-id="Air terjun">Waterfall</button>
+                        <button
+                            class="filter-btn cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="america" data-en="Beach club" data-id="Klub pantai">Beach Club</button>
+                        <button
+                            class="filter-btn cursor-pointer px-4 py-2 rounded-full text-sm md:text-base lg:text-sm bg-white border border-gray-300 translate text-gray-700"
+                            data-filter="beach" data-en="Culture" data-id="Budaya">Culture</button>
+                    </div>
+                </div>
+                <div class="w-full gallery-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+                    <!-- Destination 1 -->
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/71bc68ae-8bd9-4f5d-8f91-3dfcd7c87c2b.png"
+                            alt="Beautiful sunset at Bali beach with palm trees and golden sand"
+                            class="w-full h-full object-cover">
+                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                            <h3 class="text-xl font-bold mb-1">Bali, Indonesia</h3>
+                            <p class="text-sm">Tropical paradise with beautiful beaches</p>
+                            <div class="flex items-center mt-2">
+                                <span class="text-yellow-300 mr-1">★</span>
+                                <span class="text-sm translate" data-en="4.8 (256 reviews)"
+                                    data-id="4.8 (256 pengulas)">4.8
+                                    (256)</span>
+                            </div>
+                        </div>
+                        <div class="absolute top-4 right-4 bg-yellow-400 text-white px-3 py-1 rounded-full text-xs font-bold translate"
+                            data-en="Popular" data-id="Populer">
+                            Popular
+                        </div>
+                    </div>
+
+                    <!-- Destination 2 -->
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
+                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6313fc7c-cbe5-46e8-a442-e2cc6c9bdbb3.png"
+                            alt="White buildings with blue domes in Santorini overlooking the Aegean Sea"
+                            class="w-full h-full object-cover">
+                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                            <h3 class="text-xl font-bold mb-1">Santorini, Greece</h3>
+                            <p class="text-sm">Iconic whitewashed architecture</p>
+                            <div class="flex items-center mt-2">
+                                <span class="text-yellow-300 mr-1">★</span>
+                                <span class="text-sm translate" data-en="4.9 (312 reviews)"
+                                    data-id="4.9 (312 pengulas)">4.9
+                                    (312)</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Destination 3 -->
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/da0fc06e-0706-4a03-b535-a461df58d3a6.png"
+                            alt="Traditional Japanese temple in Kyoto with cherry blossoms"
+                            class="w-full h-full object-cover">
+                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                            <h3 class="text-xl font-bold mb-1">Kyoto, Japan</h3>
+                            <p class="text-sm">Historic temples and gardens</p>
+                            <div class="flex items-center mt-2">
+                                <span class="text-yellow-300 mr-1">★</span>
+                                <span class="text-sm translate" data-en="4.7 (198 reviews)"
+                                    data-id="4.7 (198 pengulas)">4.7
+                                    (198)</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Destination 4 -->
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80"
+                        data-category="america">
+                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/4944da08-fc27-42a4-b91b-362ac7d04faa.png"
+                            alt="New York City skyline at dusk with Empire State Building"
+                            class="w-full h-full object-cover">
+                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                            <h3 class="text-xl font-bold mb-1">New York, USA</h3>
+                            <p class="text-sm">The city that never sleeps</p>
+                            <div class="flex items-center mt-2">
+                                <span class="text-yellow-300 mr-1">★</span>
+                                <span class="text-sm translate" data-en="4.6 (421 reviews)"
+                                    data-id="4.6 (421 pengulas)">4.6
+                                    (421)</span>
+                            </div>
+                        </div>
+                        <div class="absolute top-4 right-4 bg-blue-500 text-white px-3 py-1 rounded-full text-xs font-bold translate"
+                            data-id="Unggulan" data-en="Featured">
+                            Featured
+                        </div>
+                    </div>
+
+                    <!-- Destination 5 -->
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
+                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/1c882467-347e-4f0b-88a1-c07d65d9bc57.png"
+                            alt="Overwater bungalows in Maldives with crystal clear turquoise water"
+                            class="w-full h-full object-cover">
+                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                            <h3 class="text-xl font-bold mb-1">Maldives</h3>
+                            <p class="text-sm">Luxury overwater bungalows</p>
+                            <div class="flex items-center mt-2">
+                                <span class="text-yellow-300 mr-1">★</span>
+                                <span class="text-sm translate" data-en="4.9 (287 reviews)"
+                                    data-id="4.9 (287 pengulas)">4.9
+                                    (287)</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Destination 6 -->
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe">
+                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/ff5896f8-ed07-48d5-b509-77b3a502932d.png"
+                            alt="Eiffel Tower in Paris with spring flowers in foreground"
+                            class="w-full h-full object-cover">
+                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                            <h3 class="text-xl font-bold mb-1">Paris, France</h3>
+                            <p class="text-sm">Romantic city of lights</p>
+                            <div class="flex items-center mt-2">
+                                <span class="text-yellow-300 mr-1">★</span>
+                                <span class="text-sm translate" data-en="4.8 (389 reviews)"
+                                    data-id="4.8 (389 pengulas)">4.8
+                                    (389)</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Destination 7 -->
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia">
+                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/fea06b45-1a78-46c8-8107-6b21f620ce4a.png"
+                            alt="Taj Mahal at sunrise with reflecting pool in Agra, India"
+                            class="w-full h-full object-cover">
+                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                            <h3 class="text-xl font-bold mb-1">Agra, India</h3>
+                            <p class="text-sm">Iconic wonder of the world</p>
+                            <div class="flex items-center mt-2">
+                                <span class="text-yellow-300 mr-1">★</span>
+                                <span class="text-sm translate" data-en="4.7 (245 reviews)"
+                                    data-id="4.7 (245 pengulas)">4.7
+                                    (245)</span>
+                            </div>
+                        </div>
+                        <div class="absolute top-4 right-4 bg-green-500 text-white px-3 py-1 rounded-full text-xs font-bold translate"
+                            data-id="Sedang tren" data-en="Trending">
+                            Trending
+                        </div>
+                    </div>
+
+                    <!-- Destination 8 -->
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach">
+                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/2bfe5fb7-b187-4897-b342-d8d6bae002df.png"
+                            alt="Bora Bora island with overwater bungalows in turquoise lagoon"
+                            class="w-full h-full object-cover">
+                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
+                            <h3 class="text-xl font-bold mb-1">Bora Bora</h3>
+                            <p class="text-sm">Stunning tropical escape</p>
+                            <div class="flex items-center mt-2">
+                                <span class="text-yellow-300 mr-1">★</span>
+                                <span class="text-sm translate" data-en="4.9 (301 reviews)"
+                                    data-id="4.9 (301 pengulas)">4.9
+                                    (301)</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="border-t-1 border-gray-200 pb-10 mt-15 md:mt-15 lg:mt-20">
         <div class="footer mt-13 md:mt-15 lg:mt-20 xl:mt-20 2xl:mt-20 px-5 md:px-15 lg:px-15">
             <div
@@ -206,5 +396,70 @@
     </footer>
 
     <script src="script.js"></script>
+
+    <!-- TAMBAHAN SCRIPT -->
+    <script>
+        const btn = document.getElementById("toggle-nav");
+        const sidebar = document.getElementById("sidebar");
+
+        btn.addEventListener("click", () => {
+            sidebar.classList.toggle("-translate-x-full");
+        });
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const filterBtns = document.querySelectorAll('.filter-btn');
+            const galleryItems = document.querySelectorAll('.gallery-item');
+
+            filterBtns.forEach(btn => {
+                btn.addEventListener('click', function () {
+                    // Active button styling
+                    filterBtns.forEach(b => b.classList.remove('active', 'bg-[var(--primary-color)]', 'text-white'));
+                    filterBtns.forEach(b => b.classList.add('bg-white', 'border', 'text-gray-700'));
+
+                    this.classList.add('active', 'bg-[var(--primary-color)]', 'text-white');
+                    this.classList.remove('bg-white', 'border', 'text-gray-700');
+
+                    const filter = this.getAttribute('data-filter');
+
+                    // Filter items
+                    galleryItems.forEach(item => {
+                        if (filter === 'all' || item.getAttribute('data-category') === filter) {
+                            item.style.display = 'block';
+                        } else {
+                            item.style.display = 'none';
+                        }
+                    });
+                });
+            });
+
+            // Load more button functionality (simulated)
+            const loadMoreBtn = document.querySelector('.load-more-btn');
+            let itemsToShow = 8;
+
+            loadMoreBtn.addEventListener('click', function () {
+                // In a real implementation, this would fetch more items from a server
+                // For this demo, we'll just show an alert
+                alert('In a live implementation, this would load more destination cards from the server.');
+            });
+
+            // Animation on scroll
+            const textEffect = document.querySelector('.textEffect');
+
+            function checkScroll() {
+                const position = textEffect.getBoundingClientRect().top;
+                const screenPosition = window.innerHeight / 1.3;
+
+                if (position < screenPosition) {
+                    textEffect.classList.add('animate-pulse');
+                }
+            }
+
+            window.addEventListener('scroll', checkScroll);
+        });
+    </script>
+
 </body>
+
 </html>
