--- a/destinations.html
+++ b/destinations.html
@@ -161,7 +161,7 @@
     <section class="mt-24 md:mt-35 lg:mt-40">
         <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
             <button id="toggle-nav"
-                class="button-navigasi-phone fixed top-4 md:top-25 left-4 z-50 bg-[var(--secondary-color)] text-white p-2 rounded-md lg:hidden">
+                class="button-navigasi-phone fixed top-20 md:top-25 left-4 z-50 bg-[var(--secondary-color)] text-white p-2 rounded-md lg:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path fill="currentColor"
                         d="M15 19.88c.04.3-.06.62-.29.83a.996.996 0 0 1-1.41 0L9.29 16.7a.99.99 0 0 1-.29-.83v-5.12L4.21 4.62a1 1 0 0 1 .17-1.4c.19-.14.4-.22.62-.22h14c.22 0 .43.08.62.22a1 1 0 0 1 .17 1.4L15 10.75zM7.04 5L11 10.06v5.52l2 2v-7.53L16.96 5z" />
@@ -169,8 +169,8 @@
             </button>
             <div class="grid grid-cols-1 lg:grid-cols-[2fr_8fr] gap-5 w-full">
                 <div id="sidebar"
-                    class="navigasi fixed top-0 left-0 h-full w-64 bg-white shadow-lg border-r border-gray-200 transform -translate-x-full transition-transform duration-300 ease-in-out lg:relative lg:translate-x-0 lg:w-auto lg:h-auto lg:shadow-none lg:border-none px-5 lg:pr-7 lg:pl-0 py-5 lg:pb-5 lg:pt-0 z-40">
-                    <h1 class="text-xl md:text-2xl font-semibold translate mt-20 md:mt-40 lg:mt-0" data-id="Saring"
+                    class="navigasi fixed top-0 left-0 h-full w-64 bg-white shadow-lg border-r border-gray-200 transform -translate-x-full overflow-y-scroll transition-transform duration-300 ease-in-out lg:relative lg:translate-x-0 lg:w-auto lg:h-auto lg:shadow-none lg:border-none px-5 lg:pr-7 lg:pl-0 py-5 lg:pb-5 lg:pt-0 z-40">
+                    <h1 class="text-xl md:text-2xl font-semibold translate mt-30 md:mt-40 lg:mt-0" data-id="Saring"
                         data-en="Filter">Saring
                     </h1>
                     <div class="border-gray-300 pb-5 border-b-[1px] flex flex-wrap justify-start gap-4 mb-8 mt-7">
