--- a/destinations.html
+++ b/destinations.html
@@ -169,7 +169,7 @@
             </button>
             <div class="grid grid-cols-1 lg:grid-cols-[2fr_8fr] gap-5 w-full">
                 <div id="sidebar"
-                    class="navigasi fixed top-0 left-0 h-full w-64 bg-white shadow-lg border-r border-gray-200 transform -translate-x-full overflow-y-scroll transition-transform duration-300 ease-in-out lg:relative lg:translate-x-0 lg:w-auto lg:h-auto lg:shadow-none lg:border-none px-5 lg:pr-7 lg:pl-0 py-5 lg:pb-5 lg:pt-0 z-40">
+                    class="navigasi fixed top-0 left-0 h-full w-64 bg-white shadow-lg border-r border-gray-200 transform -translate-x-full overflow-y-scroll lg:overflow-hidden transition-transform duration-300 ease-in-out lg:relative lg:translate-x-0 lg:w-auto lg:h-auto lg:shadow-none lg:border-none px-5 lg:pr-7 lg:pl-0 py-5 lg:pb-5 lg:pt-0 z-40">
                     <h1 class="text-xl md:text-2xl font-semibold translate mt-30 md:mt-40 lg:mt-0" data-id="Saring"
                         data-en="Filter">Saring
                     </h1>
