--- a/destinations.html
+++ b/destinations.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Load your dream destinations in Bali with Ajik Bali Transport" />
+
     <title>Destinations</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
